...
              ),
            ),

            // --- MAIN CONTENT ---
            SafeArea(
              child: SingleChildScrollView(
                key: const Key('scroll_view_register'),
                child: Padding(
                  padding: const EdgeInsets.symmetric(
                    horizontal: 24,
                    vertical: 30,
                  ),
                  child: Column(
...
                              ),
                            ),
                            const SizedBox(height: 24),

                            // ================= DATA DIRI =================
                            inputGroup(
                              title: 'Data Diri',
                              children: [
                                TextInputLogin(
                                  key: const Key('input_nama_lengkap'),
                                  controller: _namaController,
                                  hint: 'Nama Lengkap',
                                  keyboardType: TextInputType.name,
                                ),
                                TextInputLogin(
                                  key: const Key('input_nik'),
                                  controller: _nikController,
                                  hint: 'NIK',
                                  keyboardType: TextInputType.number,
                                ),
                                TextInputLogin(
                                  key: const Key('input_phone'),
                                  controller: _phoneController,
                                  hint: 'No Telepon',
                                  keyboardType: TextInputType.phone,
                                ),
                                TextInputLogin(
                                  controller: _tempatLahirController,
...
                                  constrainWidthToChild: true,
                                  onTapOutside: () =>
                                      setState(() => _showDdKelamin = false),
                                  content: Column(
                                    children: [
                                      MoonMenuItem(
                                        key: const Key('option_gender_pria'),
                                        onTap: () => setState(() {
                                          _showDdKelamin = false;
                                          _controllerJenisKelamin.text =
                                              _jenisKelamin[1]!;
                                        }),
                                        label: Text(_jenisKelamin[1]!),
...
                                        }),
                                        label: Text(_jenisKelamin[0]!),
                                      ),
                                    ],
                                  ),
                                  child: MoonTextInput(
                                    key: const Key('dropdown_trigger_gender'),
                                    textInputSize: MoonTextInputSize.xl,
                                    readOnly: true,
                                    hintText:
                                        _controllerJenisKelamin.text.isEmpty
                                        ? 'Jenis Kelamin'
                                        : _controllerJenisKelamin.text,
...

                            // ================= FOTO IDENTITAS =================
                            inputGroup(
                              title: 'Foto Identitas',
                              children: [
                                Container(
                                  key: const Key('area_upload_foto'),
                                  width: double.infinity,
                                  height: 200,
                                  clipBehavior: Clip.antiAlias,
                                  decoration: BoxDecoration(
                                    borderRadius: BorderRadius.circular(12),
                                    color: MoonTokens.light.colors.goku,
...

                            // ================= AKUN =================
                            inputGroup(
                              title: 'Akun',
                              children: [
                                TextInputLogin(
                                  key: const Key('input_email_reg'),
                                  controller: _controllerEmail,
                                  hint: 'Email',
                                  keyboardType: TextInputType.emailAddress,
                                ),
                                TextInputLogin(
                                  key: const Key('input_password_reg'),
                                  controller: _controllerPassword,
                                  hint: 'Password',
                                  isPassword: true,
                                ),
                                TextInputLogin(
                                  key: const Key('input_confirm_password'),
                                  controller: _confirmPasswordController,
                                  hint: 'Konfirmasi Password',
                                  isPassword: true,
                                ),
                              ],
                            ),
                            const SizedBox(height: 32),

                            // Tombol Submit
                            LoginButton(
                              key: const Key('btn_submit_register'),
                              text: 'Daftar',
                              onTap: () {
                                createUserWithEmailAndPassword();
                              },
                              // Tombol warna Biru Primary
                              withColor: true,
...
